compiler/testdata/invalid/leading_zero_float.pr
// Leading zeros in float literal.
main() {
  Float x = 00.5;
}
